Fixed issue with satellite images not showing up.

--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -70,6 +70,9 @@ body {
 .model-list-item {
 	min-height: 500px;
 }
+#test-link {
+	cursor: pointer;
+}
 /*
 Used to see the borders of the grid
 
